# TextWriter

./: .gitignore  CMakeLists.txt  Changelog.md  LICENSE  Makefile  README.md  cmdtr.rc  install.sh  win32_top.make
docs/: ESCList.html  commandUsage.html  index.html  install-bin.html  install-cmake.html  install-make.html  optionLists.html
docs/style/: style.css
include/: Colors.h  bakfile.h  convert.h  filereader.h  fileselector.h  main.h  texts.h  texts_zh_CN.h  writer.h
src/: CMakeLists.txt  Makefile  bakfile.c  cmdargs.c  convert.c  filereader.c  fileselector.c  main.c  win32.make  writer.c
